--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ sudo: required
 services:
     - docker
 
-before_install:
-    - docker build: -t pk001/react-test -f ./client/Dockerfile.dev ./client
-
-script:
-    - docker run -e CI=true pk001/react-test npm test
+    before_install:
+        - docker build -t pk001/docker-react -f Dockerfile.dev . 
+       
+      script:
+        - docker run -e CI=true pk001/docker-react npm run test
 
 after_success:
     - docker build -t pk001/multi-client ./client
