--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ services:
     - docker
 
     before_install:
-        - docker build: -t pk001/react-test -f ./client/Dockerfile.dev ./client
-    
+        - docker build -t pk001/react-test -f ./client/Dockerfile.dev ./client
+
     script:
         - docker run -e CI=true pk001/react-test npm test
 
